@@ -12,4 +12,16 @@ class TestRegexp < Test::Unit::TestCase
   def test_ruby_dev_24887
     assert_equal("a".gsub(/a\Z/, ""), "")
   end
+
+  def test_yoshidam_net_20041111_1
+    s = "[\xC2\xA0-\xC3\xBE]"
+    assert_match(Regexp.new(s, nil, "u"), "\xC3\xBE")
+  end
+
+  def test_yoshidam_net_20041111_2
+    assert_raise(RegexpError) do
+      s = "[\xFF-\xFF]"
+      Regexp.new(s, nil, "u")
+    end
+  end
 end
